--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -369,7 +369,8 @@ p {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
+  background-color: var(--focus-color);
+  opacity: 0.9;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
   -webkit-transition: -webkit-transform var(--time-function);
