--- a/sass/layout/_portfolio-main-content.scss
+++ b/sass/layout/_portfolio-main-content.scss
@@ -98,7 +98,8 @@
     width: 100%;
     height: 100%;
 
-    background-color: rgba(33, 150, 243, 0.9);
+    background-color: var(--focus-color);
+    opacity: 0.9;
 
     transform: translateY(100%);
     transition: transform var(--time-function);
